// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link renders 1`] = `
.c0 {
  color: #2d9ee4;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<a
  className="c0"
  color="info"
>
  Hello
</a>
`;

exports[`Link renders underline 1`] = `
.c0 {
  color: #2d9ee4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<a
  className="c0"
  color="info"
>
  Underline
</a>
`;
